Improve layout and add environment file
Signed-off-by: martinRenou <martin.renou@gmail.com>

--- a/Spotify_viewer.ipynb
+++ b/Spotify_viewer.ipynb
@@ -29,6 +29,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# My year on Spotify!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -43,17 +50,6 @@
     "streaming_history = pd.DataFrame(data)\n",
     "streaming_history['endTime'] = pd.to_datetime(streaming_history['endTime'])\n",
     "streaming_history[\"date\"] = streaming_history[\"endTime\"].dt.floor('d')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# print('Number of entries:', len(streaming_history))"
    ]
   },
   {
@@ -122,15 +118,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "songs = np.nan_to_num(songs)"
    ]
   },
@@ -140,18 +127,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(10, 3))\n",
-    "fig.canvas.toolbar_visible = False\n",
+    "fig = plt.figure(figsize=(9, 3))\n",
+    "fig.set_tight_layout(dict(pad=0))\n",
+    "fig.set_label(' ')\n",
+    "\n",
     "ax = plt.subplot()\n",
     "\n",
-    "ax.set_title(\"My year on Spotify\", fontsize=20,pad=40)\n",
     "ax.xaxis.tick_top()\n",
-    "ax.tick_params(axis='both', which='both',length=0)\n",
+    "ax.tick_params(axis='both', which='both', length=0, labelsize=7)\n",
     "ax.set_facecolor(\"#ebedf0\")\n",
     "fig.patch.set_facecolor('white')\n",
     "\n",
     "sns.heatmap(songs, linewidths=2, linecolor='white', square=True,\n",
-    "            cmap=\"Greens\", cbar=True,\n",
+    "            cmap=\"Greens\", cbar=True, cbar_kws=dict(orientation='horizontal', shrink=0.4),\n",
     "            vmin=0, vmax=np.max(songs), ax=ax)\n",
     "\n",
     "ax.set_yticklabels(y_labels, rotation=0)\n",
