Add credits for the original tutorial
Signed-off-by: martinRenou <martin.renou@gmail.com>

--- a/Spotify_viewer.ipynb
+++ b/Spotify_viewer.ipynb
@@ -129,6 +129,8 @@
    "source": [
     "# Your year on Spotify!\n",
     "\n",
+    "This work was inspired by [Más visualización con tus datos de Spotify con Python](https://tacosdedatos.com/mas-data-viz-con-spotify-python), also available [in english](https://dev.to/fferegrino/plotting-your-spotify-data-2km8).\n",
+    "\n",
     "How does it work?\n",
     "\n",
     "First request your data on Spotify following this link: https://www.spotify.com/account/privacy\n",
